# consolver

./: .gitignore  README.md  consolver-cli.spec  example.bat  example.sh  pyproject.toml  update.bat  update.sh
.github/workflows/: release.yml
example/: README.md  __main__.py  bv.smt2  model.txt.j2  sat.smt2  unsat.smt2
src/: __main__.py  input.py  model.py  output.py  solve.py  template.py
tests/: test_main.py
tools/: bundle_release.py  ci_pack_ubuntu16.sh  ci_pack_windows.bat  pack.bat  pack.sh  pyi_rth_z3.py  run_frozen_example.py
