[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "consolver"
version = "0.0.0"
description = "Constraint solver local CLI tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["z3-solver>=4.12"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "PyYAML>=6.0", "Jinja2>=3.1"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
